# nanotes

./: .gitignore  LICENSE  README.md  flake.nix  index.html  package-lock.json  package.json
Formula/: nanotes.rb
docs/: RELEASING.md  architecture.md
nix/: package.nix
src/: main.tsx  morph.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
